--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "eslint": "^9.13.0",
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.13",
+    "gh-pages": "^6.3.0",
     "globals": "^15.11.0",
     "sass": "^1.80.4",
     "typescript": "~5.6.2",
